<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application strings -->
    <string name="app_name">Secretariat UPT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>

    <!-- Create User and Login strings -->
    <string name="create_user_account">Creare Cont</string>
    <string name="login">Inregistrare</string>
    <string name="email">Email :</string>
    <string name="cnp">CNP :</string>
    <string name="password">Parola :</string>
    <string name="repeat_password">Repeta parola :</string>

    <!-- Create Demand strings -->
    <string name="title_activity_create_demand">CreateDemand</string>
    <string name="demand">Cerere</string>
    <string name="addressee">Adresant :</string>
    <string name="request">Cerere :</string>
    <string name="mention">Mentiuni :</string>

    <!-- Create Certificate strings -->
    <string name="title_activity_create_certificate">CreateCertificate</string>
    <string name="certificate">Adeverinta</string>
    <string name="reason">Motiv :</string>
    <string name="create">Trimite</string>

    <!-- Get Marks strings -->
    <string name="title_activity_get_marks">GetMarksActivity</string>
    <string name="year">An de studiu :</string>
    <string name="domain">Domeniu </string>
    <string name="specialty">Specializarea </string>
    <string name="mark">Marca :</string>

    <!-- Pay receipt strings -->
    <string name="title_activity_pay_receipt">PayReceiptActivity</string>
    <string name="subject">Materia :</string>
    <string name="teacher">Profesor :</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_student_info">StudentInfoActivity</string>
    <string name="title_activity_set_year">SetYearActivity</string>
    
    <string name="year_prompt">Alege anul de studiu</string>
    <string name="submit">Vezi note</string>
    <string name="study">Situatia scolara pentru anul de studiu:</string>
    
    <string-array name="year_arrays">
        <item>1</item>
        <item>2 States</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
	
</resources>
